# codingame-spring2023-ants

./: Cargo.toml  Makefile
data/: bronze.init  crash.data  wood2.init
src/: main.rs
