[package]
name = "SpringChallenge2023-ants"
version = "0.1.0"
authors = ["Richard Beneyton <richard.beneyton@gmail.com>"]
edition = "2021"

# see https://www.codingame.com/playgrounds/40701/help-center/languages-versions
# Codingame server setup: rust 1.60.0
# Inclus : chrono 0.4.19, itertools 0.10.0, libc 0.2.93, rand 0.8.3, regex 1.4.5, time 0.2.26

# $ rustup toolchain install 1.60.0
# $ rustup override set 1.60.0

[dependencies]
# force the codingame versions of included crates
chrono = "=0.4.19"
itertools = "=0.10.0"
libc = "=0.2.93"
rand = "=0.8.3"
regex = "=1.4.5"
time = "=0.2.26"

[[bin]]
name = "spring2023"
path = "src/main.rs"
